# scheduling-primitives

./: .gitignore  CLAUDE-Template.md  CLAUDE.md  constitution-template.md  main.py  pyproject.toml
data/: datapackage.json
data/fixtures/: calendars.json  multi_shift.json  overnight.json  reference.json  resource_variety.json  simple.json  stress.json
data/fixtures/scenarios/: allocate.json  auto_extend.json  calendar_arithmetic.json  checkpoint.json  consistency.json  dynamic.json  greedy.json  occupancy.json  periods_for_date.json  resolution.json  types.json  walk.json
docs/: scheduling-primitives-spec-v2.md
scripts/: verify.py
specs/: architecture.md  constitution.md
specs/001-core-primitives/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-primitives/checklists/: requirements.md
specs/001-core-primitives/contracts/: public-api.md
src/scheduling_primitives/: __init__.py  calendar.py  debug.py  greedy.py  loaders.py  occupancy.py  resolution.py  schema.py  types.py
tests/: conftest.py  test_allocate.py  test_auto_extend.py  test_calendar.py  test_calendar_exceptions.py  test_calendar_rules.py  test_checkpoint.py  test_consistency.py  test_dynamic.py  test_fixtures.py  test_greedy.py  test_occupancy.py  test_properties.py  test_resolution.py  test_types.py  test_walk.py
