[project]
name = "scheduling-primitives"
version = "0.1.0"
description = "Mechanical foundations for finite capacity scheduling: working calendars, occupancy state, and time arithmetic."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
polars = ["polars"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduling_primitives"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
]
